// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render sonarqube admin link on sonarqube for non-admin 1`] = `
<Fragment>
  link text
</Fragment>
`;

exports[`should render documentation anchor 1`] = `
<a
  href="#"
  onClick={[Function]}
>
  link text
</a>
`;

exports[`should render documentation link 1`] = `
<Link
  to="/documentation/foo/bar"
>
  link text
</Link>
`;

exports[`should render simple link 1`] = `
<Fragment>
  <a
    href="http://sample.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    link text
  </a>
  <DetachIcon
    className="text-muted little-spacer-left little-spacer-right text-baseline"
    size={12}
  />
</Fragment>
`;

exports[`should render sonarqube admin link on sonarqube for admin 1`] = `
<SonarQubeAdminLink
  canAdmin={true}
  url="/#sonarqube-admin#/foo/bar"
>
  link text
</SonarQubeAdminLink>
`;

exports[`should render sonarqube admin link on sonarqube for admin 2`] = `
<Link
  target="_blank"
  to="/foo/bar"
>
  link text
</Link>
`;

exports[`should render sonarqube link on sonarqube 1`] = `
<SonarQubeLink
  url="/#sonarqube#/foo/bar"
>
  link text
</SonarQubeLink>
`;

exports[`should render sonarqube link on sonarqube 2`] = `
<Link
  target="_blank"
  to="/foo/bar"
>
  link text
</Link>
`;
